--- a/views/ingredient.erb
+++ b/views/ingredient.erb
@@ -1,8 +1,8 @@
-<h3><%= @tag.name %></h3>
+<h3><%= @ingredient.name %></h3>
 
-<% if @tag.recipes.any? %>
+<% if @ingredient.recipes.any? %>
   <ul>
-    <% @tag.recipes.each do |recipe| %>
+    <% @ingredient.recipes.each do |recipe| %>
       <li><%= recipe %></li>
     <% end %>
   </ul>
