--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,8 +16,9 @@
 
     <div id="navigation">
       <ul>
-        <li><a href="/recipes">View Recipes</a></li>
-        <li><a href="/tags">View Tags</a></li>
+        <li><a href="/recipes">View all Recipes</a></li>
+        <li><a href="/tags">View all Tags</a></li>
+        <li><a href="/ingredients">View all Ingredients</a></li>
       </ul>
     </div>
 
