--- a/views/recipe.erb
+++ b/views/recipe.erb
@@ -1,21 +1,21 @@
 <h3><%= @recipe.name %></h3>
 
-<% if @recipe.ingredients != "" %>
+<% if @recipe.ingredients.any? %>
   <ul>
     <% @recipe.ingredients.each do |ingredient| %>
-      <li><%= ingredient %></li>
+      <li><%= ingredient[0] %></li>
     <% end %>
   </ul>
 <% else %>
   <p>There are no ingredients yet</p>
 <% end %>
 
-<% if @recipe.istructions.any? %>
+<% if @recipe.tags.any? %>
   <ul>
-    <% @recipe.instructions.each do |instructions| %>
-      <li><%= instructions %></li>
+    <% @recipe.tags.each do |tag| %>
+      <li><%= tag %></li>
     <% end %>
   </ul>
 <% else %>
-  <p>There are no instructions yet</p>
+  <p>There are no tags yet</p>
 <% end %>
