fix bug to add ingredients and tags instead of replacing

--- a/views/tag.erb
+++ b/views/tag.erb
@@ -3,7 +3,7 @@
 <% if @tag.recipes.any? %>
   <ul>
     <% @tag.recipes.each do |recipe| %>
-      <li><%= recipe %></li>
+      <li><%= recipe.name %></li>
     <% end %>
   </ul>
 <% else %>
