add view to update page

--- a/views/ingredient.erb
+++ b/views/ingredient.erb
@@ -3,7 +3,7 @@
 <% if @ingredient.recipes.any? %>
   <ul>
     <% @ingredient.recipes.each do |recipe| %>
-      <li><%= recipe %></li>
+      <li><%= recipe.name %></li>
     <% end %>
   </ul>
 <% else %>
