--- a/views/recipe.erb
+++ b/views/recipe.erb
@@ -42,3 +42,5 @@
   <% end %>
   <button type="submit">Submit</button>
 </form>
+
+<a href="/recipes/<%= @recipe.id %>/edit">Click here to update or delete this recipe</a>
